--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-gallery": "^5.3.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
