--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@angular/compiler": "^4.4.7",
     "@angular/core": "^4.4.7",
     "@angular/forms": "^4.4.7",
-    "@angular/http": "^4.4.7",
     "@angular/platform-browser": "^4.4.7",
     "@angular/platform-browser-dynamic": "^4.4.7",
     "@angular/platform-server": "^4.4.7",
@@ -32,10 +31,12 @@
     "ngx-bootstrap": "^3.0.1",
     "ngx-gallery": "^5.3.2",
     "rxjs": "^5.5.6",
+    "tslib": "^1.10.0",
     "underscore": "^1.9.1",
-    "zone.js": "^0.8.19"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.803.0",
     "@angular/cli": "^8.3.0",
     "@angular/compiler-cli": "^4.4.7",
     "@angular/language-service": "^5.2.0",
@@ -43,7 +44,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "@types/underscore": "^1.8.8",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.2.0",
