--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.7",
-    "@angular/common": "^4.4.7",
-    "@angular/compiler": "^4.4.7",
-    "@angular/core": "^4.4.7",
-    "@angular/forms": "^4.4.7",
-    "@angular/platform-browser": "^4.4.7",
-    "@angular/platform-browser-dynamic": "^4.4.7",
-    "@angular/platform-server": "^4.4.7",
-    "@angular/router": "^4.4.7",
+    "@angular/animations": "^8.2.3",
+    "@angular/common": "^8.2.3",
+    "@angular/compiler": "^8.2.3",
+    "@angular/core": "^8.2.3",
+    "@angular/forms": "^8.2.3",
+    "@angular/platform-browser": "^8.2.3",
+    "@angular/platform-browser-dynamic": "^8.2.3",
+    "@angular/platform-server": "^8.2.3",
+    "@angular/router": "^8.2.3",
     "alertifyjs": "^1.11.1",
     "angular2-jwt": "^0.2.3",
     "bootstrap": "^3.4.1",
@@ -30,16 +30,17 @@
     "ng2-file-upload": "^1.3.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-gallery": "^5.3.2",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.5.2",
     "tslib": "^1.10.0",
     "underscore": "^1.9.1",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "rxjs-compat": "^6.0.0-rc.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.0",
     "@angular/cli": "^8.3.0",
-    "@angular/compiler-cli": "^4.4.7",
-    "@angular/language-service": "^5.2.0",
+    "@angular/compiler-cli": "^8.2.3",
+    "@angular/language-service": "^8.2.3",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -55,6 +56,6 @@
     "protractor": "^6.0.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "^2.3.4"
+    "typescript": "^3.5.3"
   }
 }
